Cleanup code inspection